chore(vscode): ✨ update VSCode configurations and add new chatmode
* Updated `c_cpp_properties.json` to use GCC 15.
* Modified `launch.json` to improve debugging configuration.
* Changed `tasks.json` to reflect the new compiler path.
* Added new chatmode file `4.1-Beast.chatmode.md` for enhanced coding assistance.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,7 +1,7 @@
 {
   "configurations": [
     {
-      "name": "Debug",
+      "name": "C/C++: g++-15 build and debug active file",
       "type": "cppdbg",
       "request": "launch",
       "program": "${fileDirname}/${fileBasenameNoExtension}",
@@ -9,7 +9,7 @@
       "stopAtEntry": false,
       "cwd": "${fileDirname}",
       "environment": [],
-      "externalConsole": true,
+      "externalConsole": false,
       "MIMode": "lldb",
       "preLaunchTask": "C/C++: g++ build active file"
     }
