--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -3,10 +3,11 @@
   "tasks": [
     {
       "type": "cppbuild",
-      "label": "C/C++: g++ build active file",
-      "command": "/opt/homebrew/bin/g++-15",
+      "label": "C/C++: clang++ build active file",
+      "command": "/usr/bin/clang++",
       "args": [
-        "-fdiagnostics-color=always",
+        "-fcolor-diagnostics",
+        "-fansi-escape-codes",
         "-g",
         "${file}",
         "-o",
